<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android">

    <string name="app_name">redditDroid</string>
    <string name="action_settings">Settings</string>

    <!-- MainActivity Action Bar Navigation Items -->
    <array name="submission_sort_array">
        <item>hot</item>
        <item>new</item>
        <item>rising</item>
        <item>controversial</item>
        <item>top</item>
    </array>

    <array name="comments_sort_array">
        <item android:id="@+id/comments_sort_confidence">confidence</item>
        <item android:id="@+id/comments_sort_new">new</item>
        <item android:id="@+id/comments_sort_hot">hot</item>
        <item android:id="@+id/comments_sort_top">top</item>
        <item android:id="@+id/comments_sort_controversial">controversial</item>
        <item android:id="@+id/comments_sort_old">old</item>
        <item android:id="@+id/comments_sort_random">random</item>
    </array>

    <!-- Drawer Menu Items -->
    <array name="drawer_menu_logged_in_user_items">
        <item>View Saved</item>
        <item>Log Out</item>
    </array>

    <array name="drawer_menu_items">
        <item>Subreddits</item>
    </array>

    <string name="button_login">Log In</string>
    <string name="button_cancel">Cancel</string>

    <string name="drawer_user_menu_subtitle">LOGGED IN AS</string>
    <string name="drawer_subreddit_list_header_title">SUBREDDITS</string>

    <!-- Options Menu Strings -->
    <string name="option_menu_sort">Sort</string>
        <string name="option_sort_title_relevance">relevance</string>
        <string name="option_sort_title_hot">hot</string>
        <string name="option_sort_title_new">new</string>
        <string name="option_sort_title_rising">rising</string>
        <string name="option_sort_title_controversial">controversial</string>
        <string name="option_sort_title_top">top</string>
        <string name="option_sort_title_comments">comments</string>
        <string name="option_comment_sort_title_new">new</string>
        <string name="option_comment_sort_title_hot">hot</string>
        <string name="option_comment_sort_title_top">top</string>
        <string name="option_comment_sort_title_controversial">controversial</string>
        <string name="option_comment_sort_title_old">old</string>
        <string name="option_comment_sort_title_random">random</string>
        <string name="option_comment_sort_title_confidence">confidence</string>
    <string name="option_menu_submission_refresh">Refresh</string>
    <string name="option_menu_submission_search">Search</string>
    <string name="option_menu_submission_search_action_hint">submissions</string>
    <string name="option_menu_submission_comments">Show Comments</string>
    <string name="new_subreddits">New</string>
    <string name="popular_subreddits">Popular</string>
    <string name="search_subreddits">Search Subreddits</string>


    <!-- Subreddit Fragment Strings -->
    <string name="search_subreddits_hint">search subreddits</string>
    <string name="list_header_subreddit">front page</string>

    <!-- Log In Dialog Strings -->
    <string name="dialog_login_hint_username">username</string>
    <string name="dialog_login_hint_password">password</string>
    <string name="dialog_login_text">Log in to reddit</string>

    <!-- Submission Post Strings -->
    <string name="hint_url">URL</string>
    <string name="hint_text">Text(optional)</string>
    <string name="hint_subreddit">Subreddit</string>
    <string name="send_submission">Send</string>
    <string name="comment">Comment</string>
    <string name="submit_post">Submit Post</string>
    <string name="text_post_submission">Text Post</string>
    <string name="link_post_submission">Link Post</string>
    <string name="fields_blank">Fields cannot be blank</string>

    <!-- General -->
    <string name="ok">Ok</string>
    <string name="by">by</string>
    <string name="to">to</string>
    <string name="pts">pts</string>

    <!-- Image contentDescription Strings -->
    <string name="content_description_drawer_icon">drawer icon</string>

    <string name="content_description_submission_thumbnail">link thumbnail</string>
    <string name="content_description_submission_up_vote">up vote link</string>
    <string name="content_description_submission_down_vote">down vote link</string>

    <string name="content_description_comment_depth_indicator">comment depth indicator</string>
    <string name="content_description_comment_up_vote">up vote comment</string>
    <string name="content_description_comment_down_vote">down vote comment</string>

    <!-- Placeholder Strings -->
    <string name="placeholder_author">author</string>
    <string name="placeholder_score">score</string>
    <string name="placeholder_title">Title</string>
    <string name="placeholder_subtitle">SUBTITLE</string>
    <string name="placeholder_self_text_html">Parsing for you . . .</string>
    <string name="placeholder_subreddit">subreddit</string>

    <string name="placeholder_submission_subtitle">user | hrs ago | subreddit | domain</string>
    <string name="placeholder_submission_num_comments">number of comments</string>

    <string name="placeholder_comment_time_elapsed">time elapsed</string>
    <string name="placeholder_comment_body">comment body</string>
    <string name="placeholder_menu_item">Menu Item</string>
</resources>
