<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/sort_submissions"
        android:title="@string/option_menu_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/sort_hot" android:title="@string/option_sort_title_hot"/>
            <item android:id="@+id/sort_new" android:title="@string/option_sort_title_new"/>
            <item android:id="@+id/sort_rising" android:title="@string/option_sort_title_rising"/>
            <item android:id="@+id/sort_controversial" android:title="@string/option_sort_title_controversial"/>
            <item android:id="@+id/sort_top" android:title="@string/option_sort_title_top"/>
        </menu>
    </item>
    <item android:id="@+id/refresh_submissions"
        android:title="@string/option_menu_submission_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/search_submissions"
        android:icon="@drawable/ic_action_search"
        android:title="@string/option_menu_submission_search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionLayout="@layout/action_search" />
    <item
        android:id="@+id/submit_post"
        android:title="@string/submit_post"
        app:showAsAction="never">
        <menu>
            <item android:id="@+id/text_post_submission" android:title="@string/text_post_submission"/>
            <item android:id="@+id/link_post_submission" android:title="@string/link_post_submission"/>
        </menu>
    </item>
</menu>