<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/sort_submissions"
        android:title="@string/option_menu_sort"
        android:icon="@drawable/ic_action_sort_by_size"
        app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/sort_relevance" android:title="@string/option_sort_title_relevance"/>
            <item android:id="@+id/sort_new" android:title="@string/option_sort_title_new"/>
            <item android:id="@+id/sort_hot" android:title="@string/option_sort_title_hot"/>
            <item android:id="@+id/sort_top" android:title="@string/option_sort_title_top"/>
            <item android:id="@+id/sort_comments" android:title="@string/option_sort_title_comments"/>
        </menu>
    </item>
</menu>