<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submission_score_container"
        android:layout_marginLeft="5dp" >

        <com.danny_oh.reddit.util.ImageViewWithVoteState
            android:id="@+id/submission_up_vote"
            android:src="@drawable/selector_up_vote"
            android:contentDescription="@string/content_description_submission_up_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:submission_vote_state="false"
            />

        <TextView
            android:id="@+id/submission_score"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_score"
            android:layout_below="@id/submission_up_vote"
            android:gravity="center_horizontal"
            android:layout_centerHorizontal="true" />

        <com.danny_oh.reddit.util.ImageViewWithVoteState
            android:id="@+id/submission_down_vote"
            android:src="@drawable/selector_down_vote"
            android:background="@drawable/selectable_item_background"
            android:contentDescription="@string/content_description_submission_down_vote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/submission_score"
            android:layout_centerHorizontal="true"
            android:clickable="true"
            app:submission_vote_state="false"
            />
    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/submission_title_container"
            android:background="@drawable/selectable_item_background">

            <ImageView
                android:id="@+id/submission_thumbnail"
                android:src="@drawable/redditandroid_head"
                android:contentDescription="@string/content_description_submission_thumbnail"
                android:layout_width="@dimen/submission_icon_size"
                android:layout_height="@dimen/submission_icon_size"
                android:layout_margin="@dimen/submission_icon_margin" />

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/submission_container"
                android:layout_margin="5dp">

                <!--android:layout_alignParentTop="true"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentEnd="false"-->
                <!--android:layout_alignParentLeft="false" -->

                <!--android:layout_below="@+id/submission_title"-->
                <!--android:layout_alignParentStart="true"-->
                <!--android:layout_alignParentLeft="true" -->

                <TextView
                    android:id="@+id/submission_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_title"
                    android:textSize="@dimen/submission_title_font_size"
                    android:layout_marginBottom="@dimen/submission_title_margin"
                    android:layout_weight="0"
                    />

                <TextView
                    android:id="@+id/submission_subtitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/placeholder_submission_subtitle"
                    android:textSize="@dimen/submission_subtitle_font_size"
                    android:layout_weight="0"
                    />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/submission_num_comments"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/placeholder_submission_num_comments"
            android:textSize="@dimen/submission_num_comments_font_size"
            android:textStyle="bold"
            android:layout_weight="1"
            android:background="@drawable/selectable_item_background"
            android:layout_gravity="right"
            android:layout_marginRight="@dimen/submission_num_comments_margin"
            android:paddingLeft="@dimen/submission_num_comments_padding"
            android:paddingRight="@dimen/submission_num_comments_padding"
            android:paddingBottom="@dimen/submission_num_comments_padding" />

    </LinearLayout>

</LinearLayout>
